1. Fixed Library mix causing remote target exceptions 2. Reverted to use 2.0.2 libraries 3. Made changes to have a stable 2.0.3 version.
Will perform some tests to make sure everything is fine. Seems that a jar in the server is causing the problems. I was able to connect to a 2.0.2 server without problems using the 2.0.3 client version previous to this commit.